add hypridle to hyprland config

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -297,3 +297,5 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 # Waybar
 exec-once = waybar
 
+# Suspend management
+exec-once = hypridle
