--- a/hypridle.conf
+++ b/hypridle.conf
@@ -12,6 +12,6 @@ listener {
 # Suspend after 10 min
 #listener {
 #    timeout = 600
-#    on_timeout = systemctl suspend
+#    on-timeout = systemctl suspend
 #}
 
