add color picker config with SUPER + SHIFT + C shortcut

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -299,3 +299,7 @@ exec-once = waybar
 
 # Suspend management
 exec-once = hypridle
+
+# Color picker :)
+bind = SUPER SHIFT, C, exec, hyprpicker -a
+
