add system menu management script with rofi

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -303,3 +303,6 @@ exec-once = hypridle
 # Color picker :)
 bind = SUPER SHIFT, C, exec, hyprpicker -a
 
+# System power management
+bind = SUPER SHIFT, P, exec, ~/.config/hypr/system-menu.sh
+
