force kitty to be part of tiling (issue only on my nvidia cart computer)

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -306,3 +306,5 @@ bind = SUPER SHIFT, C, exec, hyprpicker -a
 # System power management
 bind = SUPER SHIFT, P, exec, ~/.config/hypr/system-menu.sh
 
+# Force kitty to be part of tiling
+windowrulev2 = tile, class:^(kitty)$
