handle multiple monitor on arch config

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -22,8 +22,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+monitor = HDMI-A-1, preferred, 0x0, auto
+monitor = DVI-D-1, preferred, 1920x0, auto
 
 ###################
 ### MY PROGRAMS ###
@@ -308,3 +308,4 @@ bind = SUPER SHIFT, P, exec, ~/.config/hypr/system-menu.sh
 
 # Force kitty to be part of tiling
 windowrulev2 = tile, class:^(kitty)$
+
