--- a/hyprland.conf
+++ b/hyprland.conf
@@ -309,3 +309,16 @@ bind = SUPER SHIFT, P, exec, ~/.config/hypr/system-menu.sh
 # Force kitty to be part of tiling
 windowrulev2 = tile, class:^(kitty)$
 
+# Workspace Rules
+workspace=4, monitor:HDMI-A-1
+workspace=5, monitor:HDMI-A-1
+
+workspace=1, monitor:DVI-D-1
+workspace=2, monitor:DVI-D-1
+workspace=3, monitor:DVI-D-1
+workspace=6, monitor:DVI-D-1
+workspace=7, monitor:DVI-D-1
+workspace=8, monitor:DVI-D-1
+workspace=9, monitor:DVI-D-1
+workspace=10, monitor:DVI-D-1
+
