add script to handle printscreen

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -322,3 +322,6 @@ workspace=8, monitor:DVI-D-1
 workspace=9, monitor:DVI-D-1
 workspace=10, monitor:DVI-D-1
 
+# Print screen
+bind = SUPER, I, exec, ~/.config/hypr/scripts/print-screen.sh
+
