add nextcloud at start

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -200,6 +200,9 @@ exec-once = waybar
 # Suspend management
 exec-once = hypridle
 
+# Nextcloud
+exec-once = nextcloud
+
 # Color picker :)
 bind = SUPER SHIFT, C, exec, hyprpicker -a
 
