add swaync as a notification daemon

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -54,6 +54,8 @@ exec-once = waybar
 # Suspend management
 exec-once = hypridle
 
+exec-once = swaync
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
