--- a/hyprland.conf
+++ b/hyprland.conf
@@ -182,6 +182,10 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Swaync notifications center
+
+bindl = $mainMod SHIFT, N, exec, swaync-client -t -sw
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
