add hyprlock config and binding

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -214,6 +214,10 @@ bind = SUPER SHIFT, C, exec, hyprpicker -a
 # System power management
 bind = SUPER SHIFT, P, exec, ~/.config/hypr/system-menu.sh
 
+# Hyprlock
+
+bind = SUPER SHIFT, L, exec, hyprlock
+
 # Force kitty to be part of tiling
 windowrulev2 = tile, class:^(kitty)$
 
