move system-menu inside scripts dir

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -212,7 +212,7 @@ exec-once = nextcloud
 bind = SUPER SHIFT, C, exec, hyprpicker -a
 
 # System power management
-bind = SUPER SHIFT, P, exec, ~/.config/hypr/system-menu.sh
+bind = SUPER SHIFT, P, exec, ~/.config/hypr/scripts/system-menu.sh
 
 # Hyprlock
 
