add project launch script

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -214,6 +214,9 @@ bind = SUPER SHIFT, C, exec, hyprpicker -a
 # System power management
 bind = SUPER SHIFT, P, exec, ~/.config/hypr/scripts/system-menu.sh
 
+# Quickly Launch Local Project
+bind = SUPER SHIFT, A, exec, ~/.config/hypr/scripts/project-launch.sh
+
 # Hyprlock
 
 bind = SUPER SHIFT, L, exec, hyprlock
