update cursor config

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -241,3 +241,5 @@ workspace=10, monitor:DVI-D-1
 # Print screen
 bind = SUPER, I, exec, ~/.config/hypr/scripts/print-screen.sh
 
+# Same cursor size xcursor vs hyprcursor ?
+exec-once = hyprctl setcursor Adwaita 20
