add fuzzmoji bind

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -218,6 +218,9 @@ bind = SUPER SHIFT, P, exec, ~/.config/hypr/scripts/system-menu.sh
 # Quickly Launch Local Project
 bind = SUPER SHIFT, A, exec, ~/.config/hypr/scripts/project-launch.sh
 
+# Fuzzmoji, see https://codeberg.org/codingotaku/fuzzmoji
+bind = SUPER SHIFT, E, exec, fuzzmoji
+
 # Hyprlock
 
 bind = SUPER SHIFT, L, exec, hyprlock
