--- a/hyprland.conf
+++ b/hyprland.conf
@@ -115,10 +115,9 @@ device {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
-
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod SHIFT, A, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -216,13 +215,12 @@ bind = SUPER SHIFT, C, exec, hyprpicker -a
 bind = SUPER SHIFT, P, exec, ~/.config/hypr/scripts/system-menu.sh
 
 # Quickly Launch Local Project
-bind = SUPER SHIFT, A, exec, ~/.config/hypr/scripts/project-launch.sh
+# bind = SUPER SHIFT, A, exec, ~/.config/hypr/scripts/project-launch.sh
 
 # Fuzzmoji, see https://codeberg.org/codingotaku/fuzzmoji
 bind = SUPER SHIFT, E, exec, fuzzmoji
 
 # Hyprlock
-
 bind = SUPER SHIFT, L, exec, hyprlock
 
 # Force kitty to be part of tiling
